--- a/guia3/parte1/components/content/products.html
+++ b/guia3/parte1/components/content/products.html
@@ -1,6 +1,6 @@
-<main>
+<main  class="app-content">
     <section>
-        <h3>seccion de productos</h3>
-        <p>aca va la informacion de los productos</p>
+        <h3>Seccion productos</h3>
+        <p>Aca va la info de los productos</p>
     </section>
 </main>
