--- a/guia3/parte1/css/components.css
+++ b/guia3/parte1/css/components.css
@@ -1,36 +1,35 @@
-/*estilos para el conmponente header*/
+/*Estilos para el componente header*/
 .app-header{
-    background-color: #2e49c0;
-    color: #1e4d58;
+    background-color: rgb(14, 17, 185);
+    color: aliceblue;
     padding: 15px;
 }
-.app-header{
-    color :aqua ;
-    margin: o 10 px;
-    text-decoration:  none;
+.app-header nav a {
+    color: white;
+    margin: 0 10px;
+    text-decoration: none;
 }
-.app-header nav a :hover {
+.app-header nav a:hover {
     text-decoration: underline;
-}
-/*estilos para el content*/
+} 
+/* estilos para el content*/
 .app-content{
-    margin: 10;
-    border: 1 px solid #3289b1;
+    margin: 10px;
+    border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 12 px;
-
+    padding: 12px;  
 }
-.app-content h1 {
-    margin: 0px;
+.app-content h1{
+    margin: 0;
     font-size: 18px;
-    color: #32857a;
-
+    color: darkturquoise;
 }
-.app-footer {
-    background-color: #90a3bd;
-    padding: 12 px;
+
+/*Estilos para el footer*/
+.app-footer{
+    background-color: #ddd;
+    padding: 12px;
     font-style: italic;
     font-weight: bold;
     text-align: center;
-
 }
